# ChangeLog for sys-block/tgt
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/tgt/ChangeLog,v 1.7 2010/10/20 13:30:07 cla Exp $

*tgt-1.0.7-r1 (20 Oct 2010)

  20 Oct 2010; Dawid Węgliński <cla@gentoo.org> +tgt-1.0.7-r1.ebuild:
  Revbump for respecting LDFLAGS and die on sed

  20 Oct 2010; Dawid Węgliński <cla@gentoo.org> tgt-1.0.7.ebuild:
  Respect LDFLAGS (#332725)

*tgt-1.0.7 (11 Aug 2010)

  11 Aug 2010; Alexey Shvetsov <alexxy@gentoo.org> -tgt-1.0.1.ebuild,
  +tgt-1.0.7.ebuild, metadata.xml:
  Verson bump. Also this will fix bug #329933

*tgt-1.0.1 (23 Feb 2010)

  23 Feb 2010; Alexey Shvetsov <alexxy@gentoo.org> -tgt-0.9.10.ebuild,
  +tgt-1.0.1.ebuild:
  Version bump. Also fix for bug #298190

  01 Dec 2009; Alexey Shvetsov <alexxy@gentoo.org> tgt-0.9.10.ebuild:
  Fix typo

  01 Dec 2009; Alexey Shvetsov <alexxy@gentoo.org> tgt-0.9.10.ebuild:
  Update src_install

*tgt-0.9.10 (25 Nov 2009)

  25 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org> +tgt-0.9.10.ebuild,
  +files/tgtd, +metadata.xml:
  Initial import per bug
