@@ -1,6 +1,12 @@
 # ChangeLog for sys-block/tgt
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/tgt/ChangeLog,v 1.7 2010/10/20 13:30:07 cla Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-block/tgt/ChangeLog,v 1.8 2010/10/21 09:59:51 alexxy Exp $
+
+*tgt-1.0.9 (21 Oct 2010)
+
+  21 Oct 2010; Alexey Shvetsov <alexxy@gentoo.org> -tgt-1.0.7.ebuild,
+  -tgt-1.0.7-r1.ebuild, +tgt-1.0.9.ebuild:
+  Version bump
 
 *tgt-1.0.7-r1 (20 Oct 2010)
 
